More fixes; generate swift models
