# apple/Sources/OSRM/Models/Admin.swift
@@ -1,0 +1,36 @@
+//
+// Admin.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct Admin: Codable, Hashable {
+    /** The ISO 3166-1 two-character code for the admin region. */
+    public var iso31661: String?
+    /** The ISO 3166-1 three-character code for the admin region. */
+    public var iso31661Alpha3: String?
+
+    public init(iso31661: String? = nil, iso31661Alpha3: String? = nil) {
+        self.iso31661 = iso31661
+        self.iso31661Alpha3 = iso31661Alpha3
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case iso31661 = "iso_3166_1"
+        case iso31661Alpha3 = "iso_3166_1_alpha3"
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(iso31661, forKey: .iso31661)
+        try container.encodeIfPresent(iso31661Alpha3, forKey: .iso31661Alpha3)
+    }
+}
