# apple/Sources/OSRM/Models/BannerComponent.swift
@@ -1,0 +1,43 @@
+//
+// BannerComponent.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+#if canImport(AnyCodable)
+    import AnyCodable
+#endif
+
+public struct BannerComponent: Codable, Hashable {
+    public enum ModelType: String, Codable, CaseIterable {
+        case text
+        case icon
+        case delimiter
+        case exitNumber = "exit-number"
+        case exit
+        case lane
+    }
+
+    public var text: String?
+    public var type: ModelType?
+
+    public init(text: String? = nil, type: ModelType? = nil) {
+        self.text = text
+        self.type = type
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case text
+        case type
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encodeIfPresent(text, forKey: .text)
+        try container.encodeIfPresent(type, forKey: .type)
+    }
+}
