# apple/Sources/OSRM/Models/Lane.swift
@@ -11,10 +11,24 @@ import Foundation
 #endif
 
 public struct Lane: Codable, Hashable {
-    public var indications: [String]?
-    public var valid: Bool?
+    public enum Indications: String, Codable, CaseIterable {
+        case _none = "none"
+        case uturn
+        case sharpRight = "sharp right"
+        case _right = "right"
+        case slightRight = "slight right"
+        case straight
+        case slightLeft = "slight left"
+        case _left = "left"
+        case sharpLeft = "sharp left"
+    }
 
-    public init(indications: [String]? = nil, valid: Bool? = nil) {
+    /** A list of indication (e.g. marking on the road) specifying the turn lane. A road can have multiple indications (e.g. an arrow pointing straight and left). */
+    public var indications: [Indications]
+    /** True if the lane is a valid choice for the current maneuver. */
+    public var valid: Bool
+
+    public init(indications: [Indications], valid: Bool) {
         self.indications = indications
         self.valid = valid
     }
@@ -28,7 +42,7 @@ public struct Lane: Codable, Hashable {
 
     public func encode(to encoder: Encoder) throws {
         var container = encoder.container(keyedBy: CodingKeys.self)
-        try container.encodeIfPresent(indications, forKey: .indications)
-        try container.encodeIfPresent(valid, forKey: .valid)
+        try container.encode(indications, forKey: .indications)
+        try container.encode(valid, forKey: .valid)
     }
 }
